@@ -6,17 +6,7 @@
 	          id CDATA #REQUIRED>
 
 	<!-- The MIME type (only chemical/*). -->
-	<!ELEMENT mime-type (comment+,
-	                     (acronym+, expanded-acronym+)?,
-	                     glob+,
-	                     root-XML?,
-	                     sub-class-of+,
-	                     alias*,
-	                     conflicts*,
-	                     magic?,
-	                     icon,
-	                     supported-by?,
-	                     specification*)>
+	<!ELEMENT mime-type (comment+, (acronym+, expanded-acronym+)?, glob+, root-XML?, sub-class-of+, alias*, conflicts*, magic?, icon, supported-by?, specification*)>
 	<!ATTLIST mime-type
 	          type CDATA #REQUIRED
 	          support (yes|no) "no"
@@ -48,29 +38,29 @@
 	          namespaceURI CDATA #REQUIRED
 	          localName CDATA #REQUIRED>
 
-	<!--  -->
+	<!-- The main class the MIME type belongs to. Mainly text/plain or text/xml. -->
 	<!ELEMENT sub-class-of EMPTY>
 	<!ATTLIST sub-class-of
 	          type CDATA #REQUIRED>
 
-	<!--  -->
+	<!-- The alias of the specified MIME type if any exists. -->
 	<!ELEMENT alias EMPTY>
 	<!ATTLIST alias
 	          type CDATA #REQUIRED>
 
-	<!-- Conflicting MIME-types. -->
+	<!-- Conflicting MIME-type(s). Use the @gnome and/or @kde attributes to 
+	     determine if we will have problems with KDE 3.x, GNOME <= 2.4 or both. -->
 	<!ELEMENT conflicts EMPTY>
 	<!ATTLIST conflicts
 	          type CDATA #REQUIRED
 	          gnome (yes|no) "yes"
 	          kde (yes|no) "yes">
 
-	<!--  -->
+	<!-- The magic pattern. Refer to the shared-mime-info database specification.
+	     Search http://sourceforge.net/docman/?group_id=159685 for the link. -->
 	<!ELEMENT magic (match)+>
 	<!ATTLIST magic
 	          priority CDATA #IMPLIED>
-
-	<!--  -->
 	<!ELEMENT match (match)*>
 	<!ATTLIST match
 	          offset CDATA #REQUIRED
@@ -78,13 +68,16 @@
 	          value CDATA #REQUIRED
 	          mask CDATA #IMPLIED>
 
-	<!-- Icon for GNOME 2.4 and/or KDE 3.x system. -->
+	<!-- Icon for GNOME 2.4 and/or KDE 3.x system. Use the @gnome and/or @kde
+	     attributes to determine the icon especially for KDE and/or GNOME. -->
 	<!ELEMENT icon EMPTY>
 	<!ATTLIST icon
 	          gnome CDATA #IMPLIED
 	          kde CDATA #IMPLIED>
 
-	<!-- List of applications supporting the respective MIME type. -->
+	<!-- List of applications supporting the respective MIME type.
+	     Use the @read and @write attributes to determine, if the application
+	     reads or writes or reads&writes the specified MIME type -->
 	<!ELEMENT supported-by (application+)>
 	<!ELEMENT application EMPTY>
 	<!ATTLIST application
@@ -255,10 +248,11 @@
 		<sub-class-of type="text/plain"/>
 		<icon/>
 		<supported-by>
-			<application name="emboss"/>
 			<application name="biojava"/>
 			<application name="bioperl"/>
 			<application name="biopython"/>
+			<application name="emboss"/>
+			<application name="kfile_plugin"/>
 		</supported-by>
 	</mime-type>
 
@@ -286,6 +280,7 @@
 		<icon/>
 		<supported-by>
 			<application name="bkchem"/>
+			<application name="kfile_plugin"/>
 			<application name="openbabel"/>
 		</supported-by>
 	</mime-type>
@@ -297,6 +292,7 @@
 		<icon/>
 		<supported-by>
 			<application name="bkchem"/>
+			<application name="kfile_plugin"/>
 			<application name="openbabel"/>
 		</supported-by>
 	</mime-type>
@@ -309,6 +305,7 @@
 		<icon/>
 		<supported-by>
 			<application name="jcamp-dx"/>
+			<application name="kfile_plugin"/>
 		</supported-by>
 	</mime-type>
 
@@ -584,6 +581,7 @@
 		<sub-class-of type="text/plain"/>
 		<icon/>
 		<supported-by>
+			<application name="kfile_plugin"/>
 			<application name="shelx"/>
 		</supported-by>
 	</mime-type>
@@ -594,6 +592,7 @@
 		<sub-class-of type="text/plain"/>
 		<icon/>
 		<supported-by>
+			<application name="kfile_plugin"/>
 			<application name="vmd"/>
 		</supported-by>
 	</mime-type>
